<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="80dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Text_RecipeFinder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:gravity="center"
        android:text="@string/Text_WelcomeRecipeFinder"
        android:textColor="#000000"/>

    <ImageView
        android:id="@+id/Image_RecipeFinder"
        android:layout_width="130dp"
        android:layout_height="129dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/recipefinderlogo2" />

    <EditText
        android:id="@+id/EditText_MailText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:hint="@string/mailText"
        android:textColorHint="#000000"/>

    <Button
        android:id="@+id/Button_LetsCook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:text="@string/Button_LetsCook"
        android:textColor="#000000" />

    <Button
        android:id="@+id/Button_Help"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/Button_Help"
        android:textSize="10dp"
        android:background="#4CAF50"
        />

</LinearLayout>